--- a/index.html
+++ b/index.html
@@ -4,7 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>17. async/await</title>
+    <link rel="stylesheet" href="styles.css" />
     <script src="./index.js" defer></script>
   </head>
-  <body></body>
+  <body>
+    <ol id="data-container">
+      <span id="loader" hidden>Loading...</span>
+    </ol>
+  </body>
 </html>
